# Ultimate_Tic_Tac_Toe_2.0

./: .gitignore  .pre-commit-config.yaml  Game.py  Makefile  Play_MCTS.py  README.md  first attempt.txt  requirements.txt
.sandbox/: .info
.sandbox/cpython_cdll/: Makefile  sandbox.cc  sandbox.py
.sandbox/mutex_experiment/: sandbox  sandbox.cc
.sandbox/pyqt5_test/: sandbox.py
.sandbox/python_h/: Makefile  sandbox  sandbox.cc
.sandbox/rotate_test/: Makefile  sandbox  sandbox.cc  sandbox.py
.sandbox/test_UTTT_capi/: Makefile  sandbox  sandbox.cc  sandbox.py
.sandbox/test_gym/: Makefile  sandbox  sandbox.cc
.sandbox/test_save/: sandbox  sandbox.cc
Data/: duplicates.ipynb  games-l-0-i-0.txt  games-l-0-i-2000000.txt  games-l-1-i-1500000.txt  games-l-2-i-1500000.txt  games-l-2-i-2000000.txt  games-l-3-i-2000000.txt  games-l-4-i-1500000.txt  games-l-5-i-1500000.txt  games-l-5-i-2000000.txt  games-l-6-i-1500000.txt
Game/: Boards.py  Game.py  GameTree.py  Rotation_Analysis.py  RunGame.py  UTTT.py  UTTT_Tree_Search.py
Game/C++/: ZippingDirectories.txt  miniStateCounter.c  stateCounter.c
Game/Cython/: MCTS_Game.pyx  MCTS_Logic.pyx  Play_MCTS.py  UTTT_Logic.pyx  UTTT_Node.pyx  build.py
Game/JavaScript/: Makefile  a.out.js  (+8 more)
Java/: LICENSE
Model/: CNN_Input.py  CNN_Model.py  ZeroNetwork_Train.py
Model/TorchScript/: CMakeLists.txt  model.cc  model.h  torchx.h  train.cc  utils.h
Tests/: GameTest.py  MCTS_Test.py  ZeroNetworkTests.py
UTTT/: Environment.py  Logic.py  Node.py  UTTT.py  __init__.py  play.py  second_move.py  test_UTTT_performance.py  utils.py
(+495 files in other folders)
